--- a/src/components/Feature.css
+++ b/src/components/Feature.css
@@ -5,3 +5,99 @@
 .red{
     color: #ff0000;
 }
+
+.feature{
+    width:100%;
+    padding: 8rem 0;
+    background-color: var(--background);
+    clip-path: polygon(0 0, 100% 10%, 100% 100%,0% 90%);
+}
+
+.feature .container{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.feature .left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 2rem;
+}
+
+.feature .left p{
+    margin:1.5rem 0;
+}
+
+.feature .left .btn{
+    align-self: flex-start;
+}
+
+.feature .right{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    
+}
+
+.feature .right .card{
+    display: flex;
+    flex-direction: column;
+    padding: 12px 22px;
+    margin:0.4rem;
+    width: 170px;
+    height: 170px;
+    border-radius: 24px;
+    border: 1px solid lightgray;
+    box-shadow: rgb(0 0 0/12%) 0px 8px 24px;
+    text-align: center;
+}
+
+
+.feature .right .card{
+    box-shadow: rgb(0 0 0/20%) 0px 8px 24px;
+}
+
+
+.feature .card .top{
+    display: flex;
+    flex-direction: column;
+}
+
+.feature .right img{
+    width: 50px;
+    margin: auto;
+    padding: 0.2rem 0
+}
+
+.feature .icon{
+    font-size: 36px;
+    margin: auto;
+    padding-top: 6px;
+    justify-content: center;
+    align-items: center;
+}
+
+.feature .span{
+    font-size:26px;
+}
+
+@media screen and (max-width:940px) {
+    .feature .container{
+        grid-template-columns: 1fr;
+    }
+
+    .feature .left .btn {
+        align-self: center;
+    }
+}
+
+@media screen and (max-width:478px) {
+    .featured .container .right .card{
+        width: 100%;
+    }
+    
+}
